# apex-solver

./: .gitattributes  .gitignore  .gitlab-ci.yml  .rust_rules.mdc  Cargo.toml  README.md
.github/workflows/: ci.yml
analysis/: 01_executive_summary.md  02_architecture_and_structure.md  03_core_module_analysis.md  04_optimizer_module_analysis.md  05_manifold_module_analysis.md  06_linalg_and_factors_analysis.md  07_io_and_observers_analysis.md  08_safety_and_security.md  09_performance_analysis.md  10_static_vs_dynamic_dispatch.md  11_rust_idioms_and_best_practices.md  12_recommendations.md  13_simd_speedup.md  14_simd_architecture_deep_dive.md  15_error_handling_deep_analysis.md  16_error_handling_bubble_up_audit.md  apex-camera-models.md  apex-io.md  apex-manifolds.md  apex-solver.md  workspace.md
backend_report/: 00_executive_summary.md  01_current_architecture.md  02_proposed_architecture.md  03_cpu_dense_solvers.md  04_gpu_solvers.md  05_effort_estimation.md  06_api_changes.md  07_comparison_with_ceres.md  README.md
benches/: README.md  bundle_adjustment_benchmark.rs  bundle_adjustment_comparison.rs  odometry_pose_benchmark.rs  run_all_benchmarks.sh  solver_comparison.rs
benches/cpp_comparison/: CMakeLists.txt  SETUP.md  ceres_ba_benchmark.cpp  ceres_benchmark.cpp  g2o_ba_benchmark.cpp  g2o_benchmark.cpp  gtsam_ba_benchmark.cpp  gtsam_benchmark.cpp  install_dependencies.sh  main.cpp  run_all_benchmarks.sh
benches/cpp_comparison/bundle_adjustment/include/: ceres_ba.h  g2o_ba.h  gtsam_ba.h
benches/cpp_comparison/bundle_adjustment/src/: ceres.cpp  g2o.cpp  gtsam.cpp
benches/cpp_comparison/common/: read_g2o.cpp  read_g2o.h  unified_cost.cpp
benches/cpp_comparison/common/include/: ba_benchmark_utils.h  ba_cost.h  benchmark_utils.h  unified_cost.h
benches/cpp_comparison/common/src/: ba_cost.cpp  read_bal.cpp  unified_cost.cpp
benches/cpp_comparison/odometry/include/: ceres_odometry.h  g2o_odometry.h  gtsam_odometry.h
benches/cpp_comparison/odometry/src/: ceres.cpp  ceres_odometry.cpp  g2o.cpp  g2o_odometry.cpp  gtsam.cpp  gtsam_odometry.cpp
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
cookbook/: book.toml
cookbook/src/: SUMMARY.md  core-api.md  examples.md  introduction.md  troubleshooting.md
crates/apex-camera-models/: Cargo.toml  README.md
crates/apex-camera-models/doc/: CHANGELOG.md
crates/apex-camera-models/src/: bal_pinhole.rs  double_sphere.rs  eucm.rs  fov.rs  ftheta.rs  kannala_brandt.rs  lib.rs  mod.rs  pinhole.rs  rad_tan.rs  ucm.rs
crates/apex-io/: Cargo.toml  README.md  datasets.toml
crates/apex-io/doc/: CHANGELOG.md
crates/apex-io/src/: bal.rs  g2o.rs  lib.rs  logger.rs  test_data.rs  toro.rs  utils.rs
crates/apex-io/src/dds/: error.rs  listener.rs  mod.rs  qos_mapping.rs  raw_bytes.rs  subscriber.rs
crates/apex-io/src/rosbag/: cdr.rs  error.rs  messages.rs  metadata.rs  mod.rs  reader.rs  types.rs  writer.rs
crates/apex-io/src/rosbag/storage/: mcap.rs  mod.rs  sqlite.rs
crates/apex-io/tests/: rosbag_integration_tests.rs
crates/apex-manifolds/: Cargo.toml  README.md
crates/apex-manifolds/doc/: CHANGELOG.md
crates/apex-manifolds/src/: lib.rs  rn.rs  se2.rs  se23.rs  se3.rs  se_2_3.rs  sgal3.rs  sim3.rs  so2.rs  so3.rs
crates/apex-solver/: Cargo.toml
crates/apex-solver/benches/: bundle_adjustment_benchmark.rs  odometry_pose_benchmark.rs
crates/apex-solver/benches/cpp_comparison/common/include/: benchmark_utils.h  read_bal.h
crates/apex-solver/examples/: compare_optimizers.rs  loss_function_comparison.rs  profile_datasets.rs  visualize_graph_file.rs  visualize_optimization.rs
crates/apex-solver/src/: error.rs  io_utils.rs  lib.rs  logger.rs
crates/apex-solver/src/core/: mod.rs  problem.rs  residual_block.rs  variable.rs
crates/apex-solver/src/factors/: mod.rs  projection_factor.rs
crates/apex-solver/src/linalg/: explicit_schur.rs
crates/apex-solver/src/observers/: conversions.rs  mod.rs
crates/apex-solver/src/optimizer/: dog_leg.rs  gauss_newton.rs  levenberg_marquardt.rs  mod.rs
crates/apex-solver/tests/: bundle_adjustment_integration.rs  camera_double_sphere_integration.rs  camera_eucm_integration.rs  camera_fov_integration.rs  camera_kannala_brandt_integration.rs  camera_pinhole_integration.rs  camera_radtan_integration.rs  camera_test_utils.rs  camera_ucm_integration.rs  integration_tests.rs
data/odometry/: M3500.g2o  cubicle.g2o  intel.g2o  parking-garage.g2o  ring.g2o  sphere2500.g2o  torus3D.g2o
dep/: g2o_optimizer.rs  m3500_optimization.rs  tests.rs  trust_region.rs
doc/: APEX_SOLVER_COMPREHENSIVE_ANALYSIS.md  CHANGELOG.md  Lie_theory_cheat_sheet.md  all_functionality.md  examples.md  performance.md
examples/: benchmark_jacobi_scaling.rs  bundle_adjustment.rs  bundle_adjustment_projection.rs  compare_constraint_scenarios_3d.rs  compare_optimizers.rs  compare_solvers.rs  covariance_estimation.rs  load_g2o.rs  load_graph_file.rs  load_se2_poses.rs  load_se3_poses.rs  loss_function_comparison.rs  m3500_optimization.rs  profile_datasets.rs  profile_linalg.rs  solver_demo.rs  visualize_graph.rs  visualize_graph_file.rs  visualize_optimization.rs
scripts/: profile_all_datasets.sh
src/: core.rs  error.rs  lib.rs  logger.rs
src/core/: corrector.rs  factors.rs  graph.rs  loss_functions.rs  mod.rs  problem.rs  residual_block.rs  simple_graph.rs  variable.rs
src/factors/: basic.rs  between_factor.rs  double_sphere_factor.rs  eucm_factor.rs  fov_factor.rs  geometry.rs  kannala_brandt_factor.rs  mod.rs  motion.rs  pinhole_factor.rs  prior_factor.rs  projection_factor.rs  rad_tan_factor.rs  robust.rs  se2_factor.rs  se3_factor.rs  tests.rs  ucm_factor.rs  vision.rs
src/io/: bal.rs  g2o.rs  mod.rs  toro.rs  tum.rs
src/linalg/: cholesky.rs  explicit_schur.rs  qr.rs  (+8 more)
tests/: bundle_adjustment_integration.rs  camera_double_sphere_integration.rs  camera_eucm_integration.rs  camera_fov_integration.rs  camera_kannala_brandt_integration.rs  camera_pinhole_integration.rs  camera_radtan_integration.rs  camera_test_utils.rs  camera_ucm_integration.rs  integration_tests.rs
(+77 files in other folders)
