[workspace]
resolver = "2"
members = [
    "crates/apex-manifolds",
    "crates/apex-io",
    "crates/apex-camera-models",
    "crates/apex-solver",
]

[workspace.package]
authors = ["Amin Abouee <amin.abouee@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/amin-abouee/apex-solver"
homepage = "https://github.com/amin-abouee/apex-solver"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates (use both path and version for dual local/published support)
apex-manifolds = { path = "crates/apex-manifolds", version = "0.1.0" }
apex-io = { path = "crates/apex-io", version = "0.1.0" }
apex-camera-models = { path = "crates/apex-camera-models", version = "0.1.0" }

# External dependencies (shared versions)
nalgebra = { version = "0.33", features = ["convert-glam029"] }
faer = { version = "0.22", features = ["sparse"] }
rayon = "1.11"
thiserror = "2.0.17"
rand = "0.9.2"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
colored = "2.1"
num_cpus = "1.16"
rerun = { version = "0.26.2", features = ["sdk"] }

# Dev dependencies
criterion = "0.6.0"
tempfile = "3.23"
factrs = "0.2.0"
tiny-solver = "0.17"
csv = "1.4"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
split-debuginfo = "unpacked"
debug = 1

[profile.test]
split-debuginfo = "unpacked"
debug = 1

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = "thin"
