[workspace]
resolver = "2"
members = [
    "crates/apex-manifolds",
    "crates/apex-io",
    "crates/apex-camera-models",
]

[workspace.package]
authors = ["Amin Abouee <amin.abouee@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/amin-abouee/apex-solver"
homepage = "https://github.com/amin-abouee/apex-solver"
rust-version = "1.85"

[workspace.dependencies]
apex-manifolds = { path = "crates/apex-manifolds", version = "0.1.0" }
apex-io = { path = "crates/apex-io", version = "0.1.0" }
apex-camera-models = { path = "crates/apex-camera-models", version = "0.1.0" }

# External dependencies (shared versions)
nalgebra = { version = "0.33" }
faer = { version = "0.22", features = ["sparse"] }
rayon = "1.11"
thiserror = "2.0.18"
rand = "0.9.2"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
colored = "2.2"
num_cpus = "1.17"
rerun = { version = "0.30.1", features = ["sdk"] }

# Dev dependencies
criterion = "0.6.0"
tempfile = "3.26"
factrs = "0.2.0"
tiny-solver = "0.17"
csv = "1.4"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# apex-solver package (root crate)
[package]
name = "apex-solver"
version = "1.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/apex-solver"
rust-version.workspace = true
description = "High-performance nonlinear least squares optimization with Lie group support for SLAM and bundle adjustment"
readme = "README.md"
keywords = ["optimization", "slam", "computer-vision", "robotics", "nonlinear"]
categories = ["algorithms", "science", "mathematics"]

exclude = [
    "crates/",
    "data/*",
    "doc/*.md",
    "!doc/CHANGELOG.md",
    "profiles/*",
    "output/*",
]

[[bin]]
name = "pose_graph_g2o"
path = "bin/pose_graph_g2o.rs"

[[bin]]
name = "bundle_adjustment"
path = "bin/bundle_adjustment.rs"

[[example]]
name = "visualize_graph_file"
required-features = ["visualization"]

[[example]]
name = "visualize_optimization"
required-features = ["visualization"]

[features]
default = []
visualization = ["dep:rerun", "apex-io/visualization"]

[dependencies]
apex-manifolds.workspace = true
apex-io.workspace = true
apex-camera-models.workspace = true

# External dependencies
nalgebra.workspace = true
faer.workspace = true
rayon.workspace = true
thiserror.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
num_cpus.workspace = true
chrono.workspace = true

[dependencies.rerun]
workspace = true
optional = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
factrs.workspace = true
tiny-solver.workspace = true
csv.workspace = true
serde.workspace = true

[[bench]]
name = "odometry_pose_benchmark"
harness = false

[[bench]]
name = "bundle_adjustment_benchmark"
harness = false

[lints]
workspace = true

[profile.dev]
split-debuginfo = "unpacked"
debug = 1

[profile.test]
split-debuginfo = "unpacked"
debug = 1

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = "thin"
