[package]
name = "apex-camera-models"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Camera projection models (pinhole, fisheye, omnidirectional) for bundle adjustment"
readme = "README.md"
keywords = ["camera-model", "computer-vision", "bundle-adjustment", "projection", "calibration"]
categories = ["computer-vision", "algorithms", "mathematics"]

[dependencies]
apex-manifolds.workspace = true
nalgebra.workspace = true
thiserror.workspace = true

[lints]
workspace = true
